# mobile-rpa

./: .env.example  .gitignore  DEPLOY.md  DESIGN-智能数据采集方案.md  SKILL-自动化操作与抓包技能方案.md  SKILL.md  package-lock.json  package.json  tsconfig.json
autox/: SKILL.md  autox-server-autojs6.js  autox-server-autox.js  autox-server-v2.js
deploy/: DEPLOY-SIMPLE.md  DEPLOY.md  EMULATOR-SETUP.md  WIFI-SETUP.md  frpc-local.toml  frpc.toml  frps.toml  push-autox-emulator.cmd  push-autox-to-emulator.cmd  push-frpc.cmd  setup-frpc-termux.sh  setup-frpc.sh  setup-wifi-adb.sh  start-all.sh  start-emulator-debug.cmd  start-emulator-midscene.cmd  start-local-to-cloud.cmd  start-local.cmd  stop-all.sh
docs/: product-roadmap.md  project-proposal.md  technical-implementation-guide.md
skills/: mobile-data-collector-SKILL.md  mobile-u2-SKILL.md
src/: action-executor.ts  adb-client.ts  autox-client.ts  logger.ts  types.ts  (+8 more)
u2-server/: action_mapper.py  agent.py  autox_device.py  collector.py  dashscope_client.py  data_mapper.py  device.py  midscene_bridge.py  navigator.py  pyproject.toml  safety_guard.py  script_generator.py  script_store.py  server.py  server_autox.py  traffic_analyzer.py  traffic_capture.py  validator.py  vision.py  vision_agent.py
u2-server/strategies/: __init__.py  api_strategy.py  base.py  midscene_strategy.py  rpa_copy_strategy.py  rpa_ocr_strategy.py
u2-server/tests/: test_action_mapper.py  test_dashscope_client.py  test_data_mapper.py  test_safety_guard.py  test_script_generator.py  test_traffic_analyzer.py  test_traffic_capture.py  test_vision_agent_guiplus.py
(+23 files in other folders)
